<resources>
    <string name="app_name">TokensApp</string>
    <string name="settings">Settings</string>
    <string name="tokens_menu">Board menu</string>
    <string name="changeChips">Tokens number</string>
    <string name="clearChecked">Unmark</string>
    <string name="aboutAppTV">""</string>

<!-- Settings -->
    <string name="settings_saving">Saving…</string>
    <string name="decrease_tokens_count">Decrease token count</string>
    <string name="increase_tokens_count">Increase token count</string>
...

    <string name="donate_description">Even creating such a simple application requires effort and time. You can support me by sending a donation =)</string>
    <string name="other_apps"><a href="https://hablotech.ru">Other Apps</a></string>
    <string name="youtube_link"><a href="https://www.youtube.com/channel/UCy-bYj7AH7QcmMxWWFklfkg">My YouTube channel</a></string>

    <!-- Tokens -->
    <string name="token_description">Token</string>
    <string name="token_checked">Marked</string>
    <string name="token_unchecked">Unmarked</string>
    <string name="settings_tokens_color">Tokens color</string>
    <string name="select_button_text">Select</string>

    <!-- Effects -->
    <string name="settings_animation">Win animation</string>
    <string name="settings_sound">Win sound</string>

    <string name="reinforcement_image">Reinforcement image</string>
    <!-- Dialog -->
    <string name="select_color">Select a color</string>
    <string name="selected_color_preview">Selected color</string>
    <string name="color_palette">Color palette</string>
    <string name="color_brightness">Brightness</string>
    <string name="quick_color_selection">Quick selection</string>
...
